CW-72 Fixed text position of <select> element on Safari.

--- a/src/views/page/CreateWord/index.scss
+++ b/src/views/page/CreateWord/index.scss
@@ -42,7 +42,6 @@
           color: #fff;
           font-size: 16px;
           border-radius: 0;
-          text-align: center;
 
           @include media-breakpoint-up(md) {
             font-size: 20px;
@@ -56,6 +55,7 @@
           width: 35%;
           padding: 5px 0;
           transition: all 0.3s ease;
+          text-align: -webkit-center;
 
           &.select-type {
             appearance: none;
